design system setup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
   --sub-bg-color:#1F1D2B;
   --lead-text-color:#ffffff;
   --lead-sub-color:#E0E6E9;
-  --logo-bg:#eb956a7b;
+  --logo-bg:#eb966a;
   --form-input-bg:#2D303E;
   --form-input-border:#393C49;
   --form-input-text:#ABBBC2;
