--- a/styles/global.scss
+++ b/styles/global.scss
@@ -8,3 +8,17 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
+
+button {
+	padding: 14px;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+// CLASSES
+
+.status {
+	padding: 4px 12px;
+}
