--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,6 +11,7 @@ $dark-line: #393c49;
 $dar-bg-one: #252836;
 $dark-bg-two: #1f1d2b;
 $form-bg: #2d303e;
+$form-text:#abbbc2;
 
 // ACCENT COLOURS
 $pink: #ea736d;
