--- a/components/Cart/cart.module.scss
+++ b/components/Cart/cart.module.scss
@@ -1,8 +1,23 @@
+@import '../../styles/variables.scss';
+
 .section{
-    border:2px solid red;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height:100vh;
-    width:20px;
+    height:117vh; 
+    width:80px;
+    background-color: $dark-bg-two;
+    border-radius:10px;
+    padding: 20px 0 0;
+
+
+    .imageContainer{
+        width:48px;
+        height:48px;
+        border-radius:8px;
+        background-color: $pink;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
