--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,12 @@
 @import '../styles/_variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600;700&display=swap');
 
 
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Barlow', sans-serif;
   }
   
   html,
