created the cart section UI

--- a/components/Mainpage/maincards/maincard.module.scss
+++ b/components/Mainpage/maincards/maincard.module.scss
@@ -11,7 +11,7 @@
     width:90%;
 
     div {
-        width: 20%;
+        min-width:200px;
         height: 273px;
         display: flex;
         justify-content: space-between;
