--- a/components/Cart/cart.module.scss
+++ b/components/Cart/cart.module.scss
@@ -1,23 +1,73 @@
 @import '../../styles/variables.scss';
 
-.section{
+.section {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height:117vh; 
-    width:80px;
+    height: 117vh;
+    width: 409px;
     background-color: $dark-bg-two;
-    border-radius:10px;
+    border-radius: 10px;
     padding: 20px 0 0;
 
 
-    .imageContainer{
-        width:48px;
-        height:48px;
-        border-radius:8px;
+    .imageContainer {
+        width: 48px;
+        height: 48px;
+        border-radius: 8px;
         background-color: $pink;
-        display:flex;
+        display: none;
         justify-content: center;
         align-items: center;
+    }
+
+    main {
+        width: 100%;
+        padding: 0 20px;
+        color: $lighter-text;
+
+        h2 {
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 140%;
+        }
+
+        span {
+            margin: 20px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 74px;
+            height: 34px;
+            background: $pink;
+            padding: 7px 12px;
+            border-radius: 8px;
+            font-family: 'Barlow';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 140%;
+        }
+
+        div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 20px 0;
+
+            h3:first-child {
+                width: 60%;
+            }
+
+            h3 {
+                font-family: 'Barlow';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 140%;
+            }
+        }
     }
 }
