--- a/components/Cart/cart.module.scss
+++ b/components/Cart/cart.module.scss
@@ -9,6 +9,7 @@
     background-color: $dark-bg-two;
     border-radius: 10px;
     padding: 20px 0 0;
+    position:relative;
 
 
     .imageContainer {
