--- a/components/Cart/cartFooter/CartFooter.module.scss
+++ b/components/Cart/cartFooter/CartFooter.module.scss
@@ -19,7 +19,7 @@
 
     main {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
         gap: 8px;
         padding:0;
