--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,6 +12,7 @@ $dar-bg-one: #252836;
 $dark-bg-two: #1f1d2b;
 $form-bg: #2d303e;
 $form-text:#abbbc2;
+$modal:rgba(0, 0, 0, 0.7);
 
 // ACCENT COLOURS
 $pink: #ea736d;
