--- a/components/Cart/cart/cart.module.scss
+++ b/components/Cart/cart/cart.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables.scss';
 
 .addWidth{
-    width:550px;
+    width:409px;
 }
 .removeWidth{
     width:82px;
@@ -14,7 +14,7 @@
     min-height: 100vh;
     background-color: $dark-bg-two;
     border-radius: 10px;
-    padding: 20px 0 0;
+    padding: 20px 20px 0;
     position:relative;
     transition:width .3s ease-in;
 
@@ -31,6 +31,7 @@
 
     main {
         color: $lighter-text;
+        // border:2px solid red;
 
         h2 {
             font-family: 'Barlow';
