--- a/components/payment/confirmation/confirmationPage.module.scss
+++ b/components/payment/confirmation/confirmationPage.module.scss
@@ -3,16 +3,19 @@
 .section {
     background: $dark-bg-two;
     min-height: 100vh;
-    width: 407px;
+    max-width: 407px;
     color: $lighter-text;
-    padding:0 10px;
+    padding: 0 10px;
+    border-right: 1px solid $dark-line;
+    position: relative;
 
-    section {
-        width: 100%;
-    }
+    // section {
+    //     width: 100%;
+    // }
 
     section:nth-child(2) {
         padding: 20px 10px 10px;
+        width: 2px;
 
         main {
             padding: 0 0;
@@ -20,29 +23,37 @@
             justify-content: space-between;
             align-items: center;
 
+
             div:first-child {
-                .description {
-                    font-family: 'Barlow';
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 14px;
-                    line-height: 130%;
+                span {
+                    width:70%;
+                    margin:0;
+                    p {
+                        font-family: 'Barlow';
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 14px;
+                        line-height: 130%;
+                    }
+
+                    p:last-child {
+                        font-family: 'Barlow';
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 12px;
+                        line-height: 140%;
+                        color: $grey-text;
+
+                    }
                 }
 
-                p:last-child {
-                    font-family: 'Barlow';
-                    font-style: normal;
-                    font-weight: 500;
-                    font-size: 12px;
-                    line-height: 140%;
-                    color:$grey-text;
-                }
             }
 
             div:nth-child(2) {
                 display: flex;
                 justify-content: center;
                 align-items: center;
+
 
                 span {
                     width: 48px;
@@ -57,6 +68,7 @@
                     font-weight: 500;
                     font-size: 16px;
                     line-height: 140%;
+                    margin:0 20px 0 0;
                 }
 
                 p {
@@ -76,7 +88,7 @@
     }
 
     section:last-child {
-        width: 29%;
+        width: 100%;
         padding: 20px 10px;
 
         div {
