--- a/components/payment/location/locationPage/locationPage.module.scss
+++ b/components/payment/location/locationPage/locationPage.module.scss
@@ -1,8 +1,7 @@
 @import '../../../../styles/variables.scss';
 
-.paymentSection{
+.locationPage{
     min-width:450px;
-    padding-right:10px;
-    padding-left:10px;
+    padding:0 10px;
     border-left:1px solid $dark-line;
 }
