--- a/components/payment/payment/footer/footer.module.scss
+++ b/components/payment/payment/footer/footer.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     gap:20px;
-    margin:30px 0;
+    margin:50px 0 30px;
 
     button {
         border: 1px solid $pink;
